# TND004

./: README.md
lab4/: CMakeLists.txt
lab4/code4a/: digraph.cpp  digraph.h  edge.h  main.cpp
lab4/code4b/: dsets.cpp  dsets.h  edge.h  graph.cpp  graph2_test_run.txt  main.cpp
